SERVER-36110 Fix --tlsOnNormalPorts canonicalization